--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.nav-link.active {
+  background-color: #FDC300;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.breadcrumb-item+.breadcrumb-item::before{
+  content:var(--bs-breadcrumb-divider,">") !important ;
 }
+
+.breadcrumb-item a {
+  color: #818181;
+  text-decoration: none;
+}
+
+.breadcrumb-item.active {
+  color: #E84D0E;
+}
+
+.card-body {
+  background-color: #F5F7F9;
+}
+
+.btn-primary {
+  background-color: #F3C244;
+  border-color: #F3C244;
+}
+
+.btn-primary:hover {
+  background-color: #F3C244;
+  border-color: #F3C244;
+}
+
+.btn-secondary {
+  background-color: #027F71;
+  border-color: #027F71;
+}
+
+.btn-secondary:hover {
+  background-color: #027F71;
+  border-color: #027F71;
+}
+
+.dataTables_length {
+  margin-bottom: 4px;
+}
+
+.nav-tabs .nav-link {
+  border-radius: 5px;
+  border: 1px solid #DDDDDD;
+  color: #333333;
+  font-weight: 600;
+  background-color: #ECECEC;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  border-bottom: 1px solid #DDDDDD;
+  border-top: 1px solid #DDDDDD;
+  border-left: 1px solid #DDDDDD;
+  border-right: 0px;
+}
+
